# shell

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  security.py
config/: BackgroundConfig.qml  BarConfig.qml  Config.qml  DashboardConfig.qml  LockConfig.qml  SidebarConfig.qml  UtilitiesConfig.qml
modules/background/: Background.qml
modules/bar/: Bar.qml  BarWrapper.qml
modules/bar/popouts/: Clock.qml  Content.qml
modules/controlcenter/dashboard/: DashboardPane.qml  GeneralSection.qml
modules/controlcenter/taskbar/: TaskbarPane.qml
modules/dashboard/: Dash.qml  Media.qml
modules/dashboard/dash/: Notifications.qml
modules/drawers/: Interactions.qml
modules/lock/: LockSurface.qml  NotifDock.qml
modules/notifications/: Notification.qml
modules/sidebar/: NotifDock.qml  Wrapper.qml
modules/utilities/: CaptureDeleteModal.qml  Content.qml  DrawingEditor.qml  ScreenshotDeleteModal.qml  Wrapper.qml
modules/utilities/cards/: Capture.qml  CaptureHistory.qml  Screenshot.qml  ScreenshotList.qml  Toggles.qml
services/: CircularBuffer.qml  Notifs.qml  Recorder.qml  Screenshotter.qml
